changing activity info to 90% width to prevent horizontal scroll bar

--- a/style/custom.css
+++ b/style/custom.css
@@ -421,7 +421,7 @@ a, theme_default a {
 }
 .section .activity .availabilityinfo, .section .activity .contentafterlink {
     float: left;
-    width: 100%;
+    width: 90%;
 }
 .section .activity .mod-indent-outer {
     width: 100%;
